[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/gra/lil_bubby_test.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/player/player_script.gd" type="Script" id=2]
[ext_resource path="res://assets/scripts/player/playerFSM.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.792157, 0.0392157, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.54902, 0.329412, 1 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_mask = 15
collision/safe_margin = 0.03
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state_label" type="Label" parent="."]
margin_left = -33.7119
margin_top = -46.8221
margin_right = 34.2881
margin_bottom = -32.8221
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.976471, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_bottom = 0

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="jump_buffer" type="Timer" parent="Node2D"]
wait_time = 0.3
one_shot = true

[node name="coyote_timer" type="Timer" parent="Node2D"]
wait_time = 0.1
one_shot = true

[node name="time_slow_cooldown" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="floating_timer" type="Timer" parent="."]
one_shot = true

[node name="float_bar" type="ProgressBar" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -32.0
margin_top = -50.0
margin_right = 32.0
margin_bottom = -36.0
rect_scale = Vector2( 1, 0.5 )
custom_styles/fg = SubResource( 3 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_bar" type="ProgressBar" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -50.0
margin_top = 32.0
margin_right = 14.0
margin_bottom = 46.0
rect_rotation = -89.9841
rect_scale = Vector2( 1, 0.5 )
custom_styles/fg = SubResource( 4 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_bar_hide" type="Timer" parent="."]
one_shot = true

[node name="float_bar_hide" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="grounded_updated" from="." to="." method="_on_KinematicBody2D_grounded_updated"]
[connection signal="timeout" from="Node2D/jump_buffer" to="Node2D" method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="Node2D/coyote_timer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="time_slow_cooldown" to="." method="_on_time_slow_cooldown_timeout"]
[connection signal="timeout" from="floating_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="time_bar_hide" to="." method="_on_time_bar_hide_timeout"]
[connection signal="timeout" from="float_bar_hide" to="." method="_on_float_bar_hide_timeout"]
